// TODO: source this from a central public repo.
syntax = "proto3";

option go_package = ".;asterai";

message PluginContext {
  AppQuery query = 1;
  string app_id = 2;
}

message AppQuery {
  string content = 1;
  int64 timestamp_unix_millis = 2;
  optional string user_id = 3;
}

message HostHashStringRequest {
  string content = 1;
}

message HostHashStringResponse {
  bytes hash = 1;
}

message HostHmacHashStringRequest {
  string hash = 1;
  string content = 2;
  string key = 3;
}

message HostRandomBytesRequest {
  int32 length = 1;
}

message HostRandomBytesResponse {
  bytes bytes = 1;
}

message HostVectorEmbeddingStoreRequest {
  string content = 1;
  string app_collection_name = 2;
}

message HostVectorEmbeddingSearchRequest {
  string query = 1;
  string app_collection_name = 2;
}

message HostVectorEmbeddingSearchResponse {
  repeated HostVectorEmbeddingSimilarityScore results = 1;
}

message HostVectorEmbeddingSimilarityScore {
  float score = 1;
  map<string, string> payload = 2;
}

message HostLogRequest {
  string content = 1;
  string level = 2;
}

message HostSleepRequest {
  uint64 milliseconds = 1;
}

message HostHttpRequest {
  string request = 1;
}

message HostHttpResponse {
  string response = 1;
}

message HostKvGetUserStringRequest {
  string user_id = 1;
  string key = 2;
}

message HostKvGetUserStringResponse {
  optional string value = 1;
}

message HostKvSetUserStringRequest {
  string user_id = 1;
  string key = 2;
  optional string value = 3;
}

message HostPluginEnvGetStringRequest {
  string key = 1;
}

message HostPluginEnvGetStringResponse {
  optional string value = 1;
}